# docsforge

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml  requirements.txt
agents/: __init__.py  api_agent.py  architecture_agent.py  changelog_agent.py  config_agent.py  examples_agent.py
core/: __init__.py  agent.py  mimo_client.py  orchestrator.py  scanner.py  synthesizer.py
db/: __init__.py  cache.py
docsforge/: __init__.py  cli.py
docsforge/agents/: api.py  architecture.py  changelog.py  config.py  examples.py
docsforge/core/: agent.py  llm.py  orchestrator.py  scanner.py
docsforge/db/: cache.py
eval/: __init__.py  scorer.py
proofs/: sample_run.json  usage_stats.txt
proofs/sample_output/: mkdocs.yml
proofs/sample_output/docs/: api-reference.md  architecture.md  changelog.md  configuration.md  examples.md  index.md
test-build/: mkdocs.yml
test-build/docs/: api.md  architecture.md  changelog.md  getting-started.md  index.md  setup.md
tests/: test_cache.py  test_cli.py  test_mimo_client.py  test_scanner.py
web/: __init__.py  main.py
web/static/: app.js  index.html  style.css
